GNOME Bugzilla – Bug 684702
online-accounts: Remove unneeded signal disconnections
Last modified: 2012-09-25 09:33:24 UTC
.
Created attachment 225048 [details] [review] online-accounts: Remove unneeded signal disconnections Those signals will not be emitted anymore, as the objects that could emit them will be destroyed. Fixes a warning on exit, as panel->accounts_treeview is already destroyed when we get there.
Attachment 225048 [details] pushed as 4a993e7 - online-accounts: Remove unneeded signal disconnections