online-accounts: Remove unneeded signal disconnections

Those signals will not be emitted anymore, as the objects that
could emit them will be destroyed.

Fixes a warning on exit, as panel->accounts_treeview is already
destroyed when we get there.

https://bugzilla.gnome.org/show_bug.cgi?id=684702